updated pomm service provider in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "minimum-stability": "dev",
     "require": {
-        "ghub/pomm-service-provider": "dev-master",
+        "pomm/pomm-service-provider": "dev-master",
+        "fp/lightopenid": "dev-master",
         "twig/twig": "dev-master"
     }
 }
